remove version from config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = example-pkg-maxtyulin
-version = 0.0.1
+#version = 0.0.1
 author = Max Tyulin
 author_email = max@tyulin.ru
 description = attr: ' '.join((A small example package ))
