Add pyproject, update package metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,12 @@
 [metadata]
-name = example-pkg-maxtyulin
-#version = 0.0.1
+name = example-pkg-maxtyulin-pep517
+version = 0.0.1
 author = Max Tyulin
 author_email = max@tyulin.ru
-description = attr: ' '.join((A small example package ))
-# line2 of description 
-# line3 of description
+description = A small example package
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/j5ew9/ExamplePackagePEP517
 classifiers = 
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
