--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ services:
 
 python:
   - '3.6'
+  - '3.7'
+
 install:
-  - pip install --upgrade pip setuptools pep517
+  - pip install --upgrade pip setuptools
   - pip install -r requirement-dev.txt
   - pip --version
 
@@ -17,6 +19,7 @@ script:
   - pytest
 
 before_deploy:
+  - pip install --upgrade pep517
   - python -m pep517.build --source --binary --out-dir dist .
   - echo > setup.py
 
