--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,10 @@ jobs:
             - pip --version
           script:
             - pytest
+            - pytest
 
         - name: "deploy"
+          install: skip
           before_deploy:
             - pip install --upgrade pep517
             - python -m pep517.build --source --binary --out-dir dist .
