--- a/.travis.yml
+++ b/.travis.yml
@@ -20,14 +20,15 @@ jobs:
             - pip --version
           script:
             - pytest
-            - pytest
 
-        - name: "deploy"
+        - stage: "deploy"
+          name: "deploy to pypi"
           install: skip
           before_deploy:
             - pip install --upgrade pep517
             - python -m pep517.build --source --binary --out-dir dist .
             - echo > setup.py
+
           deploy:
             provider: pypi
             server: https://test.pypi.org/legacy/
