--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ jobs:
   include:
     - stage: "deploy"
       name: "deploy to pypi"
-      install: skip
+      script: skip
       before_deploy:
         - pip install --upgrade pep517
         - python -m pep517.build --source --binary --out-dir dist .
