Update travis.yml (old version)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,21 @@
+dist: xenial
 language: python
 sudo: required
 
-services:
-  - docker
-
 python:
-  - '3.6'
+ - 3.6
+ - 3.7
+
+services:
+ - docker
 
 install:
   - pip install --upgrade pip setuptools
-  - pip install -r requirements-dev.txt
+  - pip install -r requirement-dev.txt
+  - pip --version
 
 script:
-  - pytest
-
-before_script:
-  # Disable services enabled by default
-  # http://docs.travis-ci.com/user/database-setup/#MySQL
-  - sudo /etc/init.d/postgresql stop
-   # - sudo /etc/init.d/mysql stop
+- pytest
 
 cache: pip
 
