--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-dist: xenial
 language: python
 sudo: required
 
@@ -7,7 +6,6 @@ services:
 
 python:
   - '3.6'
-  - '3.7'
 
 install:
   - pip install --upgrade pip setuptools
@@ -24,7 +22,7 @@ before_script:
 
 cache: pip
 
-jobs:
+matrix:
   include:
     - stage: deploy
       name: deploy to pypi
