--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ services:
 python:
   - '3.6'
 
+env:
+  - PYPI_UPLOAD
+  - TESTS
+
 install:
   - pip install --upgrade pip setuptools
   - pip install -r requirements-dev.txt
