--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ jobs:
         - python -m pep517.build --source --binary --out-dir dist .
         - echo > setup.py
 
-      deploy: &deplop_step
+      deploy: &deploy_step
         provider: pypi
         server: https://test.pypi.org/legacy/
         skip-cleanup: true
