--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,8 @@
 [build-system]
 requires = [
     "setuptools >= 40.0.0",
+    "setuptools_scm >= 1.15.0",
+    "setuptools_scm_git_archive >= 1.0",
     "wheel >= 0.30.0",
 ]
 build-backend = "setuptools.build_meta"
