--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = example-pkg-maxtyulin-pep517
-version = 0.0.7
+version = attr: example_pkg.utils.versiontools.get_self_version
 author = Max Tyulin
 author_email = max@tyulin.ru
 url = https://github.com/j5ew9/ExamplePackagePEP517
