Add main entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,3 +14,6 @@ classifiers =
 packages = find_namespace:
 python_requires = >=3.5
 
+[options.entry_points]
+console_scripts =
+    example_pkg_script = example_pgk.main:main
