--- a/setup.cfg
+++ b/setup.cfg
@@ -16,4 +16,4 @@ python_requires = >=3.5
 
 [options.entry_points]
 console_scripts =
-    example_pkg_script = example_pgk.main:main
+    example_pkg_script = example_pkg.main:main
