--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ jobs:
     - &deploy_job
       stage: deploy
       name: Publishing if tag is present
-      env: PYPI_UPLOAD=true
+      env:
+        PYPI_UPLOAD: true
       if: tag IS present
       install: []
       script: skip
